@@ -38,6 +38,7 @@
     <string id="30038">Download via Python-Libtorrent</string>
     <string id="30039">Sort search results by seeds</string>
     <string id="30040">Custom search option phrase</string>
+    <string id="30041">Encryption</string>
     <string id="30101">Interface</string>
     <string id="30102">P2P Network</string>
     <string id="30103">Advanced</string>
