@@ -38,6 +38,7 @@
     <string id="30038">Скачать Python-Libtorrent</string>
     <string id="30039">Сортировать поиск по количеству раздающих</string>
     <string id="30040">Дополнительная фраза в вариантах поиска</string>
+    <string id="30041">Шифрование</string>
     <string id="30101">Интерфейс</string>
     <string id="30102">P2P Сеть</string>
     <string id="30103">Дополнительные</string>
