@@ -38,6 +38,7 @@
     <string id="30038">Завантажити за допомогою Python-Libtorrent</string>
     <string id="30039">Сортувати результати пошуку по кількості роздач</string>
     <string id="30040">Додаткова пошукова фраза в варіантах пошуку</string>
+    <string id="30041">Шифрування</string>
     <string id="30101">Інтерфейс</string>
     <string id="30102">P2P Мережа</string>
     <string id="30103">Додатково</string>
