@@ -137,6 +137,13 @@
                 visible="eq(-9,0)"
                 enable="eq(-7,true)"
                 />
+        <setting
+                id="encryption"
+                type="bool"
+                label="30041"
+                default="true"
+                visible="eq(-10,0)"
+                />
     </category>
     <category label="Torrent-client">
         <setting id="torrent_save" type="enum" label="50301" lvalues="50302|50303" default="0"/>
