@@ -1,4 +1,8 @@
-﻿[B]Version 2.2.8[/B]
+﻿[B]Version 2.2.9[/B]
+[+] .torrent Проигрыватель: Теперь .torrent не теряется при обновлении окна Kodi
+[+] Проигрыватель: Улучшенная настройка сессии из cherrytorrent
+
+[B]Version 2.2.8[/B]
 [+] Добавлен Украинский язык (by kharts)
 [+] Торрент-клиент: Добавлены иконки торрент-клиентов (by kharts)
 
